[Audiosharing] Add strings for loading state and error handling
Test: atest
Flag: com.android.settingslib.flags.enable_le_audio_sharing
Bug: 362858921
Bug: 362858894
Change-Id: I9a10b1954e5d0924cf0799db01842fff4be73ed0

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -13524,6 +13524,20 @@
     <string name="audio_sharing_comfirm_dialog_content">To start sharing audio, first connect LE Audio headphones to your phone</string>
     <!-- Text for audio sharing switch active device button [CHAR LIMIT=none]-->
     <string name="audio_sharing_switch_active_button_label">Switch to <xliff:g example="My buds" id="device_name">%1$s</xliff:g></string>
+    <!-- Content for audio sharing progress dialog when starting audio stream [CHAR LIMIT=none]-->
+    <string name="audio_sharing_progress_dialog_start_stream_content">Starting audio stream\u2026</string>
+    <!-- Content for audio sharing progress dialog when adding source to device [CHAR LIMIT=none]-->
+    <string name="audio_sharing_progress_dialog_add_source_content">Sharing with <xliff:g example="My buds" id="device_name">%1$s</xliff:g>\u2026</string>
+    <!-- Content for progress dialog when connect to device [CHAR LIMIT=none]-->
+    <string name="progress_dialog_connect_device_content">Connecting to <xliff:g example="My buds" id="device_name">%1$s</xliff:g>\u2026</string>
+    <!-- Title for audio sharing retry dialog [CHAR LIMIT=none]-->
+    <string name="audio_sharing_retry_dialog_title">Couldn\'t share audio</string>
+    <!-- Content for audio sharing retry dialog [CHAR LIMIT=none]-->
+    <string name="audio_sharing_retry_dialog_content">Something went wrong. Please try again.</string>
+    <!-- Title for audio sharing incompatible device dialog [CHAR LIMIT=none]-->
+    <string name="audio_sharing_incompatible_dialog_title">Can\'t share audio with <xliff:g example="My buds" id="device_name">%1$s</xliff:g></string>
+    <!-- Content for audio sharing incompatible device dialog [CHAR LIMIT=none]-->
+    <string name="audio_sharing_incompatible_dialog_content">Audio sharing only works with headphones that support LE Audio</string>
 
     <!-- Title for audio streams preference category [CHAR LIMIT=none]-->
     <string name="audio_streams_category_title">Connect to a LE audio stream</string>
