--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -938,6 +938,28 @@
     <string name="security_settings_fingerprint_multiple_face_watch_preference_summary">Face, fingerprints, and <xliff:g id="watch" example="Dani's Watch">%s</xliff:g> added</string>
     <!-- Description for mandatory biometrics prompt-->
     <string name="mandatory_biometrics_prompt_description">Identity Check is on and requires a biometric</string>
+    <!-- Text for link to identity check settings [CHAR LIMIT=100] -->
+    <string name="go_to_settings">Go to Settings</string>
+    <!-- Dialog title when identity check auth is requested but biometrics is in lockout state [CHAR LIMIT=NONE] -->
+    <string name="identity_check_lockout_error_title">Identity Check is on and can’t verify it’s you</string>
+    <!-- Dialog title when identity check auth is requested but biometric hardware has an error. [CHAR LIMIT=NONE] -->
+    <string name="identity_check_lockout_error_description_1">Biometrics failed too many times. Lock and unlock your device to retry.</string>
+    <!-- Dialog message when identity check auth is requested but biometrics is in lockout state. "Go to Settings" launches theft protection settings, in case user wishes to disable the feature. [CHAR LIMIT=NONE] -->
+    <string name="identity_check_lockout_error_description_2">You can manage Identity Check in theft protection settings. Go to Settings</string>
+    <!-- Dialog title when identity check auth is requested but biometric hardware has an error. [CHAR LIMIT=100] -->
+    <string name="identity_check_general_error_title">Biometric required to continue</string>
+    <!-- Dialog message when identity check auth is requested but biometric hardware has an error. [CHAR LIMIT=NONE] -->
+    <string name="identity_check_general_error_description_1">Identity Check is on and requires a biometric, but your face or fingerprint sensor is unavailable\n<ul><li>Check that your camera is on and try again</li>\n<li>You can turn off Identity Check using your Google Account</li></ul></string>
+    <!-- Biometric error dialog button text for user to dismiss the dialog. [CHAR LIMIT=20] -->
+    <string name="identity_check_biometric_error_cancel">Cancel</string>
+    <!-- Biometric error dialog button text for user to acknowledge the message. [CHAR LIMIT=20] -->
+    <string name="identity_check_biometric_error_ok">OK</string>
+    <!-- Biometric error dialog button text to launch identity check settings. [CHAR LIMIT=80] -->
+    <string name="go_to_identity_check">Go to identity check</string>
+    <!-- Biometric error dialog button text to lock screen and recover biometric lockout state. [CHAR LIMIT=60] -->
+    <string name="identity_check_lockout_error_lock_screen">Lock screen</string>
+    <!-- Action for opening identity check settings page [CHAR LIMIT=NONE] [DO NOT TRANSLATE] -->
+    <string name="identity_check_settings_action"></string>
     <!-- RemoteAuth unlock enrollment and settings --><skip />
     <!-- Title shown for menu item that launches watch unlock settings. [CHAR LIMIT=40] -->
     <string name ="security_settings_remoteauth_preference_title">Remote Authenticator Unlock</string>
